@@ -3,6 +3,9 @@ Revision history for Perl extension Mail::vpopmail.
 0.60 Mon Apr 16 00:32:24 EDT 2007
    - added sql support (thanks to Werner Garcia for hints)
    - removed legacy "get" function left over from v0.52
+   - changed alldomains behavior
+     * ->map returns a hash reference of domain name -> domain directory
+     * ->dir returns an array refrence of all domain directories
 
 0.54 Wed Dec  6 15:14:22 EST 2006
    - added dir field to domaininfo
